# wgpu_book

./: Cargo.toml
shaders/: corners.wgsl  solid.wgsl
src/: camera.rs  instance.rs  lib.rs  main.rs  state.rs  texture.rs  vertex.rs
